<resources>
    <string name="app_name">DressHub</string>
    <!--    Bottom navigation title-->
    <string name="bottom_title_home">Trang chủ</string>
    <string name="bottom_title_contract">Hợp đồng</string>
    <string name="bottom_title_dress">Áo cưới</string>
    <string name="bottom_title_customer">Khách hàng</string>
    <string name="bottom_title_settings">Cài đặt</string>

    <!--    Title for app-->
    <string name="loading">Chờ trong giây lát…</string>
    <!--    Title -->
    <string name="add_item">Thêm mới</string>
    <string name="update_item">Cập nhật</string>
    <string name="reload_item">Hoàn tác</string>
    <string name="delete_item">Xóa</string>

    <!-- Dress -->
    <string name="title_dress">Tình trạng áo cưới</string>
    <string name="content_list_all_dress">Tất cả áo cưới</string>
    <string name="content_dress_rented">Đang được thuê</string>
    <string name="content_dress_renting">Sẵn sàng cho thuê</string>
    <string name="content_dress_washing">Đang giặt</string>
    <string name="title_manager_dress">Quản lý áo cưới</string>
    <string name="title_list_dress">Danh sách áo cưới</string>
    <string name="text_name_dress">Tên áo cưới</string>
    <string name="text_price_dress">Giá: 5.000.000 VND</string>
    <string name="text_size_dress">Size: S</string>
    <string name="text_color_dress">Màu: Trắng</string>
    <string name="text_type_dress">Loại áo: Truyền Thống</string>
    <string name="cancel_item">Hủy</string>

    <string name="hint_time_start">Giờ bắt đầu</string>
    <string name="hint_time_end">Giờ kết thúc</string>
    <string name="hint_id_work_shirt">Mã ca làm</string>
    <string name="hint_id_name_shirt">Tên ca làm</string>


    <!--    Text for input-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Họ và tên</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_phoneSecond">Số điện thoại phụ</string>
    <string name="hint_salary">Lương cơ bản</string>
    <string name="hint_join_date">Ngày vào làm</string>
    <string name="hint_bỉthday">Ngày sinh</string>
    <string name="hint_birthday">Ngày sinh</string>
    <string name="hint_role">Chức vụ</string>
    <string name="hint_work_shift">Ca làm việc</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_description">Mô tả</string>
    <string name="hint_text">Điền tại đây</string>
    <string name="hint_id">ID</string>
    <!---->
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_wedding_date">Ngày cưới</string>
</resources>