<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/bottom_title_home" />

    <item
        android:id="@+id/navigation_contract"
        android:icon="@drawable/icon_contract"
        android:title="@string/bottom_title_contract" />

    <item
        android:id="@+id/navigation_dress"
        android:icon="@drawable/icon_dress"
        android:title="@string/bottom_title_dress" />
    <item
        android:id="@+id/navigation_customer"
        android:icon="@drawable/icon_customer"
        android:title="@string/bottom_title_customer" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/bottom_title_settings" />
</menu>