<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_dress" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_tenaocuoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/text_name_dress"
                    android:textColor="@color/black"
                    android:lines="1"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_gia"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/text_price_dress"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/tv_tenaocuoi"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tenaocuoi" />

                <TextView
                    android:id="@+id/tv_size"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/text_size_dress"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/tv_gia"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gia" />

                <TextView
                    android:id="@+id/tv_mau"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/text_color_dress"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/tv_size"
                    app:layout_constraintTop_toBottomOf="@+id/tv_size" />

                <TextView
                    android:id="@+id/tv_loai"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/text_type_dress"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/tv_mau"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mau" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/btn_delete_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/bgr_button_item"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/delete_item"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_update_item"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />
        </LinearLayout>
</androidx.cardview.widget.CardView>