<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">
<!--    Button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppCompatButtonStyle"
        android:text="@string/add_item"
        android:layout_marginVertical="8dp"
        />
    <LinearLayout
        android:id="@+id/layout_btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reload_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/AppCompatButtonStyle"
            android:text="@string/reload_item"
            android:layout_marginEnd="8dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/AppCompatButtonStyle"
            android:text="@string/update_item"
            android:layout_marginStart="8dp"

            />
    </LinearLayout>
<!-- Search Input-->
    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:hint="Tìm kiếm..."
        />
<!--    TextInput-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        style="@style/TextInputLayout"
        app:startIconDrawable="@drawable/icon_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/text_input_background"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        style="@style/TextInputLayout"
        app:startIconDrawable="@drawable/icon_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/text_input_background"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        app:errorEnabled="false"
        app:startIconDrawable="@drawable/icon_description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_background"

            android:gravity="top"
            android:minLines="3"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
<!--    -->
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
<!--Dropdown-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       style="@style/TextInputLayout.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@drawable/dropdown_background"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_item"
        android:foreground="@drawable/button_add_item"
        app:srcCompat="@drawable/icon_add" />


</LinearLayout>