<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.employee.EmployeeCreateFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--    TextInput-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_phone"
                app:counterEnabled="true"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_salary"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_money">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:lines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_join_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_join_date"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_bỉthday"
                    style="@style/TextInputLayout"
                    android:layout_marginRight="4dp"
                    app:startIconDrawable="@drawable/icon_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@drawable/background_text_input"
                        android:textSize="16sp"
                        android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_role"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    style="@style/TextInputLayout.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_dropdown"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                style="@style/TextInputLayout"
                app:startIconDrawable="@drawable/icon_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/background_text_input"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_work_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_work_shift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_dropdown"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppCompatButtonStyle"
                android:text="@string/add_item"
                android:layout_marginVertical="12dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>